--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,7 @@
 :root{
-    --color-primary: #2584ff;
-    --color-secondary: #00d9ff;
-    --color-accent: #f6472c;
+    --color-primary: #97acc8;
+    --color-secondary: #478c71;
+    --color-accent: #52908a;
     --color-headings: rgb(34, 96, 50);
     --color-body: rgb(123, 150, 123);
     --color-body-darker:#7d7699;
